maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:28: error: value += is not a member of Int
a+=1
 ^